--- a/index.html
+++ b/index.html
@@ -5,11 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filip Slavić</title>
+    <title>Sljedeća stranica</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <h1>Filip Slavić</h1>
+    <nav class="navbar">
+     <div class="navbar__container">
+        <a href="/" id="navbar__logo">Filip</a>
+        <div class="navbar__toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div> 
+     </div>
+    </nav>
+    
+     
+  <ul class="navbar__menu">
+      <li class="navbar__item">
+          <a href="/" class="navbar__links">Početna</a>
+     </li>
+     <li class="navbar__item">
+        <a href="/tech.html" class="navbar__links"> O meni </a>
+   </li>
+   <li class="navbar__item">
+    <a href="/" class="button"> Zanimljivosti </a>
+</li>
+    </ul> 
+  </div>
+ </nav>
 </body>
 
 </html>
