--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sljedeća stranica</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-    <nav class="navbar">
-     <div class="navbar__container">
-        <a href="/" id="navbar__logo">Filip</a>
-        <div class="navbar__toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div> 
-     </div>
-    </nav>
-    
-     
-  <ul class="navbar__menu">
-      <li class="navbar__item">
-          <a href="/" class="navbar__links">Početna</a>
-     </li>
-     <li class="navbar__item">
-        <a href="/tech.html" class="navbar__links"> O meni </a>
-   </li>
-   <li class="navbar__item">
-    <a href="/" class="button"> Zanimljivosti </a>
-</li>
-    </ul> 
-  </div>
- </nav>
+    <div class="topnav">
+        <a class="active" href="#naslovna">Naslovna</a>
+        <a href="#meniomeni">O meni</a>
+        <a href="#menikontakt">Kontakt</a>
+    </div>
+    <div class="container" id="naslovna">
+        <img src="spuderman.jpg" alt="Marvel" style="width:100%;opacity: 0.8;">
+        <div class="centered">
+          <p><b>FILIP SLAVIĆ</b></h1>
+          <p style="font-size: 25px;">Preddiplomski sveučilišni studij informatike</p>
+        </div>
+    </div>
+    <div class="omeni" id="meniomeni">
+        <h2>O MENI</h2>
+        <hr>
+        <div class="row">
+            <div class="col-5">
+                <p>Pozdrav! Ja sam Filip! Dolazim iz Đakova, gdje sam i završio 2020. godine jezičnu gimnaziju "A.G.Matoš". Svoje školovanje sam nastavio na Fakultetu informatike u Puli. Odabrao sam ovaj smjer jer sam od malena imao veliku želju raditi s kompjuterima. Trenutno sam 2. godina preddiplomskog studija. </p>
+                <hr><p>U slobodno vrijeme volim igrati nogometi, ići u gym i igrati igrice. Svakodnevno se družim s prijateljima; zajedno idemo na kave, na plažu i naravno u menzu.</p>
+                <hr><p><b>Fun facts: </b>Znam tečno govoriti i engleski i njemački. Najdraža serija mi je <i>Outer Banks</i>. Najdraže jelo mi je lasagne, a najdraži topli napitak macchiato. </p>
+            </div>
+            <div class="col-7">
+                <img src="filipslavic.jpg" alt="Filip" id="slikaomeni">
+            </div>
+            <hr>
+        </div>
+    </div>
+    <div class="kontakt" id="menikontakt">
+        <h2>KONTAKT</h2>
+        <hr>
+        <div class="row">
+            <div class="col-12">
+                <p><b>LOKACIJA:</b> Đakovo, Croatia</p>
+                <p><b>TELEFON:</b> 091/945-4763</p>
+                <p><b>EMAIL:</b> fslavic@student.unipu.hr</p>
+            </div>
+            <hr>
+        </div>
+    </div>
 </body>
 
 </html>
