--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init('user_XOeDCYoDxLd8gy31aInUZ');
+        })();
+    </script>
+    <script type="text/javascript">
+        window.onload = function() {
+            document.getElementById('contact-form').addEventListener('submit', function(event) {
+                event.preventDefault();
+                this.contact_number.value = Math.random() * 100000 | 0;
+                // these IDs from the previous steps
+                emailjs.sendForm('contact_service', 'contact_form', this)
+                    .then(function() {
+                        console.log('SUCCESS!');
+                    }, function(error) {
+                        console.log('FAILED...', error);
+                    });
+            });
+        }
+    </script>
 </head>
 
 <body>
@@ -15,8 +36,8 @@
         <a href="#meniomeni">O meni</a>
         <a href="#menikontakt">Kontakt</a>
     </div>
-    <div class="container" id="naslovna">
-        <img src="spuderman.jpg" alt="Marvel" style="width:100%;opacity: 0.8;">
+    <div  id="naslovna">
+        <img src="spuderman.jpg" alt="Marvel" style="width:100%;opacity: 0.8;" class="col-12">
         <div class="centered">
           <p><b>FILIP SLAVIĆ</b></h1>
           <p style="font-size: 25px;">Preddiplomski sveučilišni studij informatike</p>
@@ -46,6 +67,20 @@
                 <p><b>TELEFON:</b> 091/945-4763</p>
                 <p><b>EMAIL:</b> fslavic@student.unipu.hr</p>
             </div>
+            <hr>
+        </div>
+        <div class="row" style="margin-bottom: 15px;">
+            <form id="contact-form">
+                <h2> KONTAKT FORMA </h2><hr>
+                <input type="hidden" name="contact_number">
+                <label><b>Ime:</b></label>
+                <input type="text" name="user_name"><br><br>
+                <label><b>Email:</b></label>
+                <input type="email" name="user_email"><br><br>
+                <label><b>Poruka:</b></label>
+                <textarea name="message"></textarea><br><br>
+                <input type="submit" value="Send">
+            </form>
             <hr>
         </div>
     </div>
